Added phone and email links, #3.

--- a/bankjoy.html
+++ b/bankjoy.html
@@ -5,20 +5,31 @@
     <title>Bankjoy</title>
     <link type="text/css" rel="stylesheet" href="bankjoy.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600" rel="stylesheet">
+    <script src="https://use.fontawesome.com/7fdda3cfec.js"></script>
   </head>
   <body>
     <div id="background-image">
       <div id="overlay">
-        <div class="content">
-          <div id="company">
-            <img id="logo" src="http://i.imgur.com/WEiaUa6.png">
-          </div>
-          <div id="tagline-container">
-            <h1 id="tagline">Mobile Banking for Credit Unions</h1>
-          </div>
-          <div id="action-container">
-            <p id="call-action">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
-          </div>
+        <div class="nav-contact">
+          <ul>
+            <li class="contact">
+              <a id="phone" href="tel:6504298711"><span><i class="fa fa-phone" aria-hidden="true"></i></span>(650) 429-8711</a>
+            </li>
+            <li class="contact">
+              <a id="email" href="mailto:contact@bankjoy.com"><span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>Email Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="content">
+        <div id="company">
+          <img id="logo" src="http://i.imgur.com/WEiaUa6.png">
+        </div>
+        <div id="tagline-container">
+          <h1 id="tagline">Mobile Banking for Credit Unions</h1>
+        </div>
+        <div id="action-container">
+          <p id="call-action">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
         </div>
       </div>
     </div>
