Added request demo button, #5

--- a/bankjoy.html
+++ b/bankjoy.html
@@ -31,6 +31,13 @@
         <div id="action-container">
           <p id="call-action">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
         </div>
+        <div class="request-demo">
+          <a id="demo-link" href="https://bankjoy.com/#signup">
+            <div id="demo-button">
+              Schedule a demo
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </body>
