Added phone images, #7.

--- a/bankjoy.html
+++ b/bankjoy.html
@@ -38,6 +38,15 @@
             </div>
           </a>
         </div>
+        <div class="marketing-container">
+          <div class="phones">
+            <img id="center-phone" src="http://i.imgur.com/IR1fL0J.png">
+            <div id="shadow-right"></div>
+            <img id="right-phone" src="http://i.imgur.com/TNxDo6v.png">
+            <img id="left-phone" src="http://i.imgur.com/56FosXF.png">
+            <div id="shadow-left"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
