--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bankjoy</title>
-    <link type="text/css" rel="stylesheet" href="bankjoy.css">
+    <link type="text/css" rel="stylesheet" href="default.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600" rel="stylesheet">
     <script src="https://use.fontawesome.com/7fdda3cfec.js"></script>
   </head>
